--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13652,4 +13652,6 @@
     <string name="bluetooth_connect_access_dialog_negative">Don\u2019t connect</string>
     <!-- Strings for Dialog connect button -->
     <string name="bluetooth_connect_access_dialog_positive">Connect</string>
+    <!-- DotOS Maintainer -->
+    <string name="dot_maintainer">DotOS Maintainer</string>
 </resources>
